[package]
name = "wmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.0"
crossbeam-queue = "0.3.4"
crossbeam-utils = "0.8.7"
dashmap = "5.1.0"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
num_cpus = "1.13.1"
parking_lot = "0.12.0"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli"] }
synchronoise = "1.0.0"
thiserror = "1.0.30"
tl = { version = "0.7.2", features = ["simd"] }
tokio = { version = "1.17.0", features = ["rt"] }
typed-builder = "0.10.0"
walkdir = "2.3.2"
